--- a/analyse.html
+++ b/analyse.html
@@ -55,6 +55,68 @@
                             <div class="card-body">
                                 <h4 class="card-title">Conséquentialisme</h4>
                                 <p class="card-text">Le conséquentialisme</p>
+                                <p>
+                                    L’éthique des conséquences, aussi appelée conséquentialisme, consiste à évaluer une action uniquement à travers ses effets réels. 
+                                    Ce qui importe, ce ne sont pas les intentions, ni les moyens utilisés, mais bien le résultat final. 
+                                    Si une action améliore le bien-être collectif, alors elle est moralement justifiable. 
+                                    Cette approche, théorisée par des penseurs comme Bentham et Mill, met l’accent sur l’utilité sociale, même lorsque certains compromis sont nécessaires. 
+                                    Mill ajoute néanmoins que dans ce calcul, il faut prendre en compte certains éléments moins quantifiables — comme la liberté, 
+                                    la dignité ou encore l’autonomie — car leur perte peut avoir des conséquences invisibles mais profondes.
+                                </p>
+                                <p>
+                                    Lorsqu’on applique ce raisonnement aux logiciels antivirus, une tension importante apparaît. 
+                                    Pour fonctionner correctement, ces outils doivent avoir un accès très étendu au système. 
+                                    Ils lisent tous les fichiers, surveillent les connexions, analysent les comportements. 
+                                    En échange de cette intrusion, ils offrent une promesse : celle d’une cybersécurité renforcée, à l’échelle individuelle et collective. 
+                                    Et sur le papier, si chacun adopte un antivirus efficace et éthique, tout le monde en sort gagnant. 
+                                    La sécurité de chacun renforce celle des autres. Le compromis semble acceptable.
+                                </p>
+                                <p>
+                                    Mais cette vision se heurte rapidement à la réalité. 
+                                    Le pouvoir d’accès que ces logiciels exigent ouvre aussi la porte à des usages qui n’ont plus rien à voir avec la protection. 
+                                    Certaines entreprises collectent des données pour les revendre, d’autres exploitent les comportements pour générer du profit ou orienter l’attention. 
+                                    Dans ces cas, l’effet réel de l’intrusion n’est plus la sécurité, mais la captation. On passe d’un outil protecteur à un système de contrôle. 
+                                    Et une fois que ces effets apparaissent, même partiellement, le calcul moral change complètement. 
+                                    On ne parle plus de protection, mais de méfiance généralisée, d’environnement numérique appauvri, de société fragmentée.
+                                </p>
+                                <p>
+                                    Il faut aussi regarder les choses sur la durée. 
+                                    Ce type de surveillance produit des effets qui ne sont pas toujours visibles tout de suite. 
+                                    Au départ, l’utilisateur accepte parce qu’il y a une raison — se protéger, éviter un danger. Mais au fil du temps, il s’y habitue. 
+                                    Il finit par ne plus y penser. Et c’est là que l’impact devient plus profond. On s’autocensure sans s’en rendre compte. 
+                                    On limite sa liberté d’expression, ses recherches, ses expérimentations, simplement parce qu’on sait que quelque chose ou quelqu’un observe. 
+                                    Cela peut sembler anodin à court terme, mais ce sont justement ces ajustements silencieux qui transforment une société. 
+                                    Une perte d’autonomie, même diffuse, finit par affaiblir la capacité de chacun à réfléchir librement et à remettre en question ce qui l’entoure.
+                                </p>
+                                <p>
+                                    Ce glissement progressif est d’ailleurs ce qu’il y a de plus inquiétant. 
+                                    À force de considérer l’exception comme normale, on change notre seuil de tolérance. 
+                                    Ce qui était autrefois choquant devient habituel. Et ce que l’on accepte aujourd’hui redéfinit ce que la génération suivante trouvera acceptable demain. 
+                                    Ce transfert est une conséquence à part entière, et elle pèse lourd dans l’analyse morale. 
+                                    On ne peut pas défendre une technologie sous prétexte qu’elle protège maintenant, si elle fragilise durablement notre capacité collective à penser autrement.
+                                </p>
+                                <p>
+                                    Du point de vue strictement conséquentialiste, ce sont ces effets à long terme qui comptent le plus. 
+                                    Si une action, même motivée par la sécurité, produit en réalité un climat de surveillance généralisée, 
+                                    une perte de confiance et une société plus passive, alors son impact final est négatif. 
+                                    Et cela suffit à la rendre moralement indéfendable.
+                                </p>
+                                <p>
+                                    Ce n’est donc pas une question de principe ou de refus de la technologie. 
+                                    Ce n’est pas le fait que le logiciel collecte des données qui pose problème en soi. Ce qui compte, 
+                                    c’est ce que cette collecte produit — sur le comportement des individus, sur la structure sociale, et sur l’état futur de nos libertés. 
+                                    Si les conséquences sont globalement destructrices, alors il faut revoir l’outil, ses usages, et le cadre dans lequel il s’inscrit.
+                                </p>
+                                <p>
+                                    Il devient alors essentiel de poser des garde-fous concrets. 
+                                    Limiter les privilèges techniques aux fonctions strictement nécessaires. Imposer une transparence sur l’usage réel des données. 
+                                    Renforcer les mécanismes de contrôle et de responsabilité. 
+                                    Ce sont ces conditions qui permettront de préserver les bénéfices sans encourager les dérives. 
+                                    C’est aussi comme ça qu’on peut continuer à exploiter les outils de la cybersécurité sans compromettre ce qui, à long terme, fonde une société libre.
+                                </p>
+                                <p>
+                                    Car en définitive, si seule la conséquence compte, alors elle doit inclure tout ce que l’action transforme — aujourd’hui et demain.
+                                </p>
                             </div>
                         </div>
                     </div>
