Update analyse.html  Ethique des vertus

--- a/analyse.html
+++ b/analyse.html
@@ -191,11 +191,84 @@
                         </div>
                     </div>
 
-                    <div class="carousel-item">
+                     <div class="carousel-item">
                         <div class="card">
                             <div class="card-body">
-                                <h4 class="card-title">Éthique des Vertus</h4>
-                                <p class="card-text">L'éthique des vertus</p>
+                                <h5 class="card-title">Éthique des Vertus</h5>
+                                <p class="card-text">
+                                    L’éthique des vertus, contrairement au conséquentialisme qui insiste
+                                    sur les conséquences de l’action et au déontologisme qui insiste sur le devoir/le respect des règles, insiste 
+                                    sur l’intention de la personne qui agit ainsi que sur son caractère moral.
+                                    Elle représente donc une philosophie plus humaine qui encourage le développement personnel et qui favorise la 
+                                    responsabilité morale continue.
+                                    Un inconvénient qu'on pourrait reprocher à cette éthique est que les vertus peuvent différer d'une culture à l'autre
+                                    et trancher entre deux comportements vertueux en conflit peut s'avérer délicat.
+                                </p>
+                                <p class="card-text"> 
+                                    En occident, les fondements de cette éthique remontent à l'Antiquité avec des penseurs tels 
+                                    Aristote et Platon (même si une penséee similaire aurait existé antérieurement dans la philosophie chinoise).
+                                </p>
+                                <img src="images/Aristote.jpg" class="img-fluid rounded my-3 mx-auto d-block" alt="Aristote">
+                                <p class="text-center fw-bold mb-3">Aristote</p>
+                                <p class="card-text">
+                                    Pour Aristote, les vertus ne sont pas innées, mais découlent des "habitus", ce qui signifie qu'elles se forment 
+                                    via l'enseignement, l'habitude et l'expérience et sont acquises en ayant des actes suivant le modèle d'un homme bon et juste.
+                                    Pour lui, une action morale découle d'un équilibre vertueux entre deux extrêmes, par exemple,
+                                    l'homme en bonne santé n'est ni épuisé ni excité, et l'homme courageux n'est ni lâche ou téméraire.
+                                    La vertu aristotienne est donc une posture de modération et d'équilibre, toutes les vertus 
+                                    découlent donc de la prudence, qui représente la vertu la plus fondamentale.
+                                    La vie bonne est celle permettant d'atteindre l'épanouissement (eudaimonia) en développant des vertus comme le courage, la justice, etc
+                                </p>
+                                <p class="card-text">
+                                    Après avoir été quelque peu éclipsée par d’autres courants éthiques modernes, cette approche a été remise à l’honneur au XXe siècle par des philosophes comme <strong>Elizabeth Anscombe</strong> ou <strong>Alasdair MacIntyre</strong>.
+                                </p>
+                                <div class="d-flex justify-content-center align-items-center gap-4 my-4 flex-wrap">
+                                    <div class="text-center">
+                                        <img src="images/anscombe.png" class="img-fluid rounded virtue-img" style="max-width: 150px;" alt="Elizabeth Anscombe">
+                                        <p class="fw-bold mt-2">Elizabeth Anscombe</p>
+                                    </div>
+                                    <div class="text-center">
+                                        <img src="images/alasdair_macintyre_1_.jpg" class="img-fluid rounded virtue-img" style="max-width: 150px;" alt="Alasdair MacIntyre">
+                                        <p class="fw-bold mt-2">Alasdair MacIntyre</p>
+                                    </div>
+                                </div>
+                                <p class="card-text">
+                                    Pour Elizabeth Anscombe, la démarche éthique relève de la subjectivité et de l'etude des caractère et des dispositions.
+                                    Dans un article en 1958, elle rejette fermement les éthiques utilitariste et déontologique car elles ont conservé des concepts de devoir et obligation sans fondement , et encourage le développement
+                                    d'une éthique fondée sur les vertus du caractère pour développer une morale enracinée dans la psychologie humaine, les intentions et la formation morale des gens. 
+                                </p>
+                                <p class="card-text">
+                                    Alasdair MacIntyre, quant à lui, condamne l'idée selon laquelle une posture éthique serait un point de vue neutre et universel 
+                                    et souhaite restaurer une éthique communautaire et téléologique centrée sur les vertus développées à travers la pratique.
+                                    Il pense qu'une bonne vie suppose des repères culturels partagés et une communauté morale.
+                                </p>
+                                <p class="card-text">    
+                                    <strong>Application au domaine des logiciels à forts privilèges (comme les antivirus)</strong> :
+                                    <br><br>               
+                                    Intégrons maintenant à notre cas d'étude cette éthique des vertus au niveau de plusieurs acteurs: 
+                                </p>
+                                <p class="card-text">                                   
+                                    <strong>Le développeur de l’antivirus/ du logiciel :</strong> 
+                                    Si le développeur est vertueux, son action principale est moralement éthique car
+                                    il y a une volonté de protection du consommateur en créant un logiciel défendant les systèmes informatiques tout en respectant la vie privée; il agit donc avec bienveillance, prudence et honnêteté. 
+                                    <br><br>
+                                    Cependant, il est possible qu’il ait une volonté de mettre en dépendance de son antivirus le consommateur, ou encore pire qu'il cherche à collecter les données des utilisateurs,
+                                    il agit dès lors par vice et non plus par vertu.
+                                </p>
+                                <p class="card-text">                                    
+                                    <strong>Le vendeur de l’antivirus:</strong> 
+                                    Il doit y avoir une volonté de transparence à travers son commerce 
+                                    pour que le consommateur puisse avoir la possibilité de connaître le fonctionnement de son logiciel, notamment en ce qui concerne l'accès aux données privées ou le transfert d'informations.                                    
+                                    Il doit également y avoir une volonté d’accessibilité/ d’équité : l’antivirus ne doit pas être hors
+                                    de prix et doit être représentatif du travail fourni par les acteurs de l’industrie, il faut qu'il y ait une équité entre les capacités du produit, le travail fourni, et le prix demandé.  
+                                    <br><br>
+                                    Un vendeur animé par avidité en cherchant à tirer profit des craintes de consommateurs naïfs agirait en contradiction avec les vertus d'un bon commerçant.
+                                       
+                                </p>
+                                <p class="card-text">
+                                    L'éthique des vertus nous indique que la confiance repose sur le caractères moral des différentes parties prenantes. Dans le domaine de notre cas d'étude, cette confiance est cruciale car l'utilisateurs
+                                    doit pouvoir présumer que ceux qui développent et vendent l'antivirus agissent non pas pour exploiter, mais pour rendre service.
+                                </p>
                             </div>
                         </div>
                     </div>
