--- a/team.html
+++ b/team.html
@@ -73,7 +73,7 @@
                             </div>
                         </div></div>
                         <div class="col-sm-6 col-lg-3"><div class="card text-start">
-                            <img class="card-img" src="images/#" alt="picture" />
+                            <img class="card-img" src="images/toussaint.png" alt="picture" />
                             <div class="card-body">
                                 <h4 class="card-title">Paul Toussaint</h4>
                                 <p class="card-text">avis</p>
