--- a/enquetepro.html
+++ b/enquetepro.html
@@ -1,112 +1,91 @@
 <!doctype html>
-<html lang="en">
-    <head>
-        <title>Ethics Project - Home</title>
-        <!-- Required meta tags -->
-        <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
+<html lang="fr">
+<head>
+    <title>Interview avec Monsieur De Coninck</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-        <!-- Bootstrap CSS v5.2.1 -->
-        <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-            rel="stylesheet"
-            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-            crossorigin="anonymous"
-        />
+    <!-- Bootstrap CSS v5.2.1 -->
+    <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+        crossorigin="anonymous"
+    />
 
-        <link href="css/main.css" rel="stylesheet"/>
+    <link href="css/main.css" rel="stylesheet"/>
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+    </style>
+</head>
 
-    </head>
-
-    <body>
-        <header>
-            <nav id="navbar-main" class="navbar navbar-expand-lg fixed-top navbar-light bg-light shadow-sm">
-                <div class="container-fluid">
-                    <a class="navbar-brand btn" href="index.html">Home</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar_global">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbar_global">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="questionnement.html">Questionnement</a></li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownEnquete" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Enquête
-                                </a>
-                                <ul class="dropdown-menu" aria-labelledby="navbarDropdownEnquete">
-                                    <li><a class="dropdown-item" href="enquete.html">Enquête</a></li>
-                                    <li><a class="dropdown-item" href="enquetepro.html">Enquête Professionnelle</a></li>
-                                </ul>
-                            </li> 
-                            <li class="nav-item"><a class="nav-link" href="analyse.html">Analyse</a></li>
-                            <li class="nav-item"><a class="nav-link" href="synthese.html">Synthèse</a></li>
-                            <li class="nav-item"><a class="nav-link" href="team.html">Notre Équipe</a></li>
-                            <li class="nav-item"><a class="nav-link" href="sources.html">Sources</a></li>
-                        </ul>
-                    </div>
+<body>
+    <header>
+        <nav id="navbar-main" class="navbar navbar-expand-lg fixed-top navbar-light bg-light shadow-sm">
+            <div class="container-fluid">
+                <a class="navbar-brand btn" href="index.html">Home</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar_global">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbar_global">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="questionnement.html">Questionnement</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownEnquete" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Enquête
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownEnquete">
+                                <li><a class="dropdown-item" href="enquete.html">Enquête</a></li>
+                                <li><a class="dropdown-item" href="enquetepro.html">Enquête Professionnelle</a></li>
+                            </ul>
+                        </li> 
+                        <li class="nav-item"><a class="nav-link" href="analyse.html">Analyse</a></li>
+                        <li class="nav-item"><a class="nav-link" href="synthese.html">Synthèse</a></li>
+                        <li class="nav-item"><a class="nav-link" href="team.html">Notre Équipe</a></li>
+                        <li class="nav-item"><a class="nav-link" href="sources.html">Sources</a></li>
+                    </ul>
                 </div>
-            </nav>
-        </header>
-        <main>
-            <!-- Page Content goes here -->
-            <section class="section-header overflow-hidden pt-7 pt-lg-8 pb-9 pb-lg-12">
-                <div class="container">
-                    <h2 class="mb-4">Interview avec Monsieur De Coninck</h2>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <section class="section-header overflow-hidden pt-7 pt-lg-8 pb-9 pb-lg-12">
+            <div class="container mt-5 pt-5">
+                <h2 class="mb-4">Interview avec Monsieur De Coninck</h2>
 
                 <h4>Utilisation des outils informatiques :</h4>
                 <p>Monsieur De Coninck utilise quotidiennement des outils informatiques, principalement pour son travail, mais également pour d’autres activités personnelles.</p>
 
                 <h4>Sécurité informatique :</h4>
-                <p>Il explique qu’il n’utilise pas d’antivirus lorsqu'il travaille sur Linux (Mac), 
-                    et désactive souvent Windows Defender sur les machines Windows en raison de problèmes de compatibilité avec ses travaux liés au machine learning. 
-                    Bien qu'il ne sache pas précisément comment fonctionne Windows Defender, il connaît le fonctionnement général des antivirus modernes, 
-                    notamment le système de signatures.</p>
+                <p>Il explique qu’il n’utilise pas d’antivirus lorsqu'il travaille sur Linux (Mac), et désactive souvent Windows Defender sur les machines Windows en raison de problèmes de compatibilité avec ses travaux liés au machine learning. Bien qu'il ne sache pas précisément comment fonctionne Windows Defender, il connaît le fonctionnement général des antivirus modernes, notamment le système de signatures.</p>
 
                 <h4>Expérience face aux cyber-attaques :</h4>
-                <p>Monsieur De Coninck n’a jamais été personnellement victime d’une cyber-attaque. Toutefois, 
-                    il précise qu’une personne de sa famille a été affectée par la fuite de numéros sur WhatsApp, recevant ainsi des spams et des emails de phishing, 
-                    sans toutefois subir de graves dommages.</p>
+                <p>Monsieur De Coninck n’a jamais été personnellement victime d’une cyber-attaque. Toutefois, il précise qu’une personne de sa famille a été affectée par la fuite de numéros sur WhatsApp, recevant ainsi des spams et des emails de phishing, sans toutefois subir de graves dommages.</p>
 
                 <h4>Rapport à la confidentialité des données :</h4>
-                <p>En ce qui concerne la confidentialité, 
-                    Monsieur De Coninck indique ne pas être particulièrement paranoïaque quant aux cookies et données mineures lors de la navigation sur internet, 
-                    tout en limitant consciemment les informations qu’il divulgue. 
-                    Il insiste sur le fait qu'il refuse de fournir des informations inutiles lorsqu'il utilise des services en ligne.</p>
+                <p>En ce qui concerne la confidentialité, Monsieur De Coninck indique ne pas être particulièrement paranoïaque quant aux cookies et données mineures lors de la navigation sur internet, tout en limitant consciemment les informations qu’il divulgue. Il insiste sur le fait qu'il refuse de fournir des informations inutiles lorsqu'il utilise des services en ligne.</p>
 
                 <h4>Confiance envers les systèmes de protection :</h4>
-                <p>Il précise clairement qu’il ne serait pas prêt à confier toutes ses données personnelles à un logiciel promettant une sécurité maximale. 
-                    Selon lui, dans un contexte où la surveillance de masse augmente, il est essentiel de faire attention aux traces numériques que l’on laisse derrière soi. 
-                    Même sans avoir quelque chose à cacher, il estime que la confidentialité est importante à préserver.</p>
+                <p>Il précise clairement qu’il ne serait pas prêt à confier toutes ses données personnelles à un logiciel promettant une sécurité maximale. Selon lui, dans un contexte où la surveillance de masse augmente, il est essentiel de faire attention aux traces numériques que l’on laisse derrière soi. Même sans avoir quelque chose à cacher, il estime que la confidentialité est importante à préserver.</p>
 
                 <h4>Utilisation des données par les entreprises :</h4>
-                <p>Monsieur De Coninck critique l'usage excessif des données personnelles par certains services, citant en exemple la carte de fidélité Freedelity, 
-                    qui nécessite la présentation d’une carte d'identité pour la création du compte, ce qu’il juge disproportionné.</p>
+                <p>Monsieur De Coninck critique l'usage excessif des données personnelles par certains services, citant en exemple la carte de fidélité Freedelity, qui nécessite la présentation d’une carte d'identité pour la création du compte, ce qu’il juge disproportionné.</p>
 
                 <h4>Importance de l'éducation à la cybersécurité :</h4>
-                <p>Enfin, il considère que la cybersécurité est avant tout une question de bon sens et de polyvalence. Selon lui, 
-                    il est préférable d’éduquer les utilisateurs à être prudents et autonomes plutôt que de les rendre dépendants d'un outil ou d'une technologie spécifique, 
-                    ce qui risquerait de limiter leur liberté et leur capacité à choisir.</p>
-                </div>
-            </section>
+                <p>Enfin, il considère que la cybersécurité est avant tout une question de bon sens et de polyvalence. Selon lui, il est préférable d’éduquer les utilisateurs à être prudents et autonomes plutôt que de les rendre dépendants d'un outil ou d'une technologie spécifique, ce qui risquerait de limiter leur liberté et leur capacité à choisir.</p>
+            </div>
+        </section>
+    </main>
 
-        </main>
-        <footer class="fixed-bottom align-items-center">
-            <i>Ce projet est réalisé dans le cadre du cours "Question Éthique en IA et NTIC" de l'Université Polytechnique de Mons</i>
-        </footer>
-        <!-- Bootstrap JavaScript Libraries -->
-        <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
+    <footer class="fixed-bottom align-items-center bg-light text-center py-2">
+        <i>Ce projet est réalisé dans le cadre du cours "Question Éthique en IA et NTIC" de l'Université Polytechnique de Mons</i>
+    </footer>
 
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
-            crossorigin="anonymous"
-        ></script>
-    </body>
+    <!-- Bootstrap JavaScript Libraries -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
+</body>
 </html>
