--- a/questionnement.html
+++ b/questionnement.html
@@ -54,7 +54,23 @@
             <!-- Page Content goes here -->
             <section class="section-header overflow-hidden pt-7 pt-lg-8 pb-9 pb-lg-12">
                 <div class="container">
-                    <h2>page questionnement</h2>
+                    <h2>Notre questionnement</h2>
+                    <p class="lead mb-4">À l'ère du numérique, de nombreux logiciels, notamment les antivirus, demandent un accès étendu et privilégié au système de l'utilisateur.
+                        Ils sont capables de lire tous les fichiers, surveiller les connexions et parfois même d'envoyer des informations vers des serveurs externes.
+                        Bien qu'ils soient conçus pour protéger, ils peuvent aussi devenir de puissant outils d'intrusion s'ils sont configurés par des personnes malveillantes.
+                    </p>
+                    <p>Cette dualité soulève une question fondamentale:     
+                        <strong>Peut-on accorder notre confiance aux logiciels intrusifs type antivirus?</strong>
+                        <br>Et surtout, comment juger si cette confiance est méritée quand la plupart des utilisateurs ne comprennent pas pleinement ce que le logiciel fait réellement en arrière-plan? 
+                    </p>
+                    <p>Notre site interroge donc la légitimité de cette confiance et les critères éthiques à appliquer pour évaluer le comportement des développeurs, éditeurs et vendeurs des logiciels à forts privilèges.
+                    <br>Pour mieux cerner cette problématique, nous avons effectué notre analyse suivant deux démarches de terrain: </p>
+                    <ul>
+                        <li>Tout d'abord, nous avons fait un sondage auprès du grand public pour comprendre le niveau de connaissances et de confiance accordés par les utilisateurs vis à vis de ces logiciels.</li>
+                        <li>Nous avons ensuite interviewé un professionnel du milieu afin d'avoir un point de vue plus éclairé et plus pertinent sur les pratiques réelles de ces logiciels et sur leurs enjeux éthiques internes.</li>
+                    </ul>
+                    <p>Suite à ces enquêtes, nous avons choisi d'aborder cette problématique à travers différentes théories éthiques (nous avons choisi le conséquentialisme, l'éthique des responsabilités, l'éthique des vertus et le déontologisme) afin d'évaluer l'intrusivité des logiciels à forts privilèges sous plusieurs angles.
+                    </p>
                 </div>
             </section>
 
