ajout conclusion de l analyse éthique

--- a/synthese.html
+++ b/synthese.html
@@ -59,7 +59,10 @@
                     <div class="mb-5">
                         <h4>1. Synthèse des éthiques analysées</h4>
                         <p class="text-muted">
-                            blabla
+                            Malgré les différences entre ces quatre approches, un élément commun en ressort souvent, la partie prenante dont l'éthique importe le plus dans notre problématique, c'est le développeur de l'antivirus.
+                            <br>
+                            En effet, dans l'éthique des vertus, l'intention du développeur de développer un antivirus se devant de protéger l'utilisateur est primordiale, ce qui rejoint le déontologisme et l'éthique des responsabilités qui portent l'accent sur le devoir et la responsabilité du développeur à créer un logiciel bienveillant ne causant aucun préjudice à son utilisateur, que ce soit une surveillance abusive ou une collecte malhonnête de données.
+                            <br>On constate dans le conséquentialisme une conclusion identique, l'accent est porté sur le fait que l'antivirus doit avoir pour conséquences la protection des données de l'utilisateur sans qu'il ne ressente de quelque manière que ce soit une utilisation opportuniste de cette protection.
                         </p>
                     </div>
         
