--- a/team.html
+++ b/team.html
@@ -54,42 +54,74 @@
             <!-- Page Content goes here -->
             <section class="section-header overflow-hidden pt-7 pt-lg-8 pb-9 pb-lg-12">
                 <div class="container">
-                    <h2>Notre équipe</h2>
-                    <div class="row justify-content-center align-items-center g-2">
-                        <div class="col-sm-6 col-lg-3">
-                            <div class="card text-start">
-                                <img class="card-img" src="images/bongiovanni.png" alt="picture" />
+                    <h2 class="mb-5 text-center">Notre équipe</h2>
+
+                    <!-- Arthur -->
+                    <div class="card mb-4 mx-auto" style="max-width: 900px;">
+                        <div class="row g-0 align-items-center">
+                            <div class="col-md-4 text-center">
+                                <img src="images/bongiovanni.png" class="img-fluid rounded-start" style="max-height: 200px;" alt="Arthur Bongiovanni">
+                                <p class="fw-bold mt-2 mb-0">Arthur Bongiovanni</p>
+                            </div>
+                            <div class="col-md-8">
                                 <div class="card-body">
-                                    <h4 class="card-title">Arthur Bongiovanni</h4>
                                     <p class="card-text">avis</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-sm-6 col-lg-3"><div class="card text-start">
-                            <img class="card-img" src="images/#" alt="picture" />
-                            <div class="card-body">
-                                <h4 class="card-title">Noah Mine</h4>
-                                <p class="card-text">avis</p>
+                    </div>
+
+                    <!-- Noah -->
+                    <div class="card mb-4 mx-auto" style="max-width: 900px;">
+                        <div class="row g-0 align-items-center">
+                            <div class="col-md-4 text-center">
+                                <img src="images/#" class="img-fluid rounded-start" style="max-height: 200px;" alt="Noah Mine">
+                                <p class="fw-bold mt-2 mb-0">Noah Mine</p>
                             </div>
-                        </div></div>
-                        <div class="col-sm-6 col-lg-3"><div class="card text-start">
-                            <img class="card-img" src="images/toussaint.png" alt="picture" />
-                            <div class="card-body">
-                                <h4 class="card-title">Paul Toussaint</h4>
-                                <p class="card-text">avis</p>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <p class="card-text">avis</p>
+                                </div>
                             </div>
-                        </div></div>
-                        <div class="col-sm-6 col-lg-3"><div class="card text-start">
-                            <img class="card-img" src="images/moutier.jpeg" alt="picture" />
-                            <div class="card-body">
-                                <h4 class="card-title">Simon Moutier</h4>
-                                <p class="card-text">avis</p>
+                        </div>
+                    </div>
+
+                    <!-- Paul -->
+                    <div class="card mb-4 mx-auto" style="max-width: 900px;">
+                        <div class="row g-0 align-items-center">
+                            <div class="col-md-4 text-center">
+                                <img src="images/toussaint.png" class="img-fluid rounded-start" style="max-height: 200px;" alt="Paul Toussaint">
+                                <p class="fw-bold mt-2 mb-0">Paul Toussaint</p>
                             </div>
-                        </div></div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <p class="card-text">
+                                        Pour ma part, je trouve que les 4 éthiques analysées correspondent plutôt bien à notre problématique, même si je trouve que la plus importante reste l'éthique des responsabilités car c'est celle qui va faire en sorte que le développeur de l'antivirus veille le plus rigoureusement et professionnellement à la sécurité de l'utilisateur et de ses données,
+                                        <br>L'éthique des vertus et le déontologisme auraient pu être celles que j'aurais mises en première place, mais je trouve que l'éthique des vertus ne mettait pas assez l'accent sur la rigueur que nécessitait le développement d'un antivirus, même si le principe est tout aussi noble que pour l'éthique des responsabilités.
+                                        <br>Quant au déontologisme, c'est plutôt l'effet inverse : l'aspect rigoureux est là, mais la volonté de bienveillance du développeur envers l'utilisateur l'est moins.
+                                        <br>Les utilisateurs doivent aussi faire preuve d'une éthique des responsabilités, comme par exemple la responsabilité de se renseigner sur le fonctionnement du logiciel qu'ils utilisent, même si cette responsabilité est bien moindre selon moi que celle qui incombe au développeur.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Simon -->
+                    <div class="card mb-4 mx-auto" style="max-width: 900px;">
+                        <div class="row g-0 align-items-center">
+                            <div class="col-md-4 text-center">
+                                <img src="images/moutier.jpeg" class="img-fluid rounded-start" style="max-height: 200px;" alt="Simon Moutier">
+                                <p class="fw-bold mt-2 mb-0">Simon Moutier</p>
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <p class="card-text">avis</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
-
         </main>
         <footer class="fixed-bottom align-items-center">
             <i>Ce projet est réalisé dans le cadre du cours "Question Éthique en IA et NTIC" de l'Université Polytechnique de Mons</i>
