--- a/analyse.html
+++ b/analyse.html
@@ -60,8 +60,8 @@
                                     Ce qui importe, ce ne sont pas les intentions, ni les moyens utilisés, mais bien le résultat final. 
                                     Si une action améliore le bien-être collectif, alors elle est moralement justifiable. 
                                     Cette approche, théorisée par des penseurs comme Bentham et Mill, met l’accent sur l’utilité sociale, même lorsque certains compromis sont nécessaires. 
-                                    Mill ajoute néanmoins que dans ce calcul, il faut prendre en compte certains éléments moins quantifiables — comme la liberté, 
-                                    la dignité ou encore l’autonomie — car leur perte peut avoir des conséquences invisibles mais profondes.
+                                    Mill ajoute néanmoins que dans ce calcul, il faut prendre en compte certains éléments moins quantifiables,comme la liberté, 
+                                    la dignité ou encore l’autonomie, car leur perte peut avoir des conséquences invisibles mais profondes.
                                 </p>
                                 <p>
                                     Lorsqu’on applique ce raisonnement aux logiciels antivirus, une tension importante apparaît. 
@@ -82,7 +82,7 @@
                                 <p>
                                     Il faut aussi regarder les choses sur la durée. 
                                     Ce type de surveillance produit des effets qui ne sont pas toujours visibles tout de suite. 
-                                    Au départ, l’utilisateur accepte parce qu’il y a une raison — se protéger, éviter un danger. Mais au fil du temps, il s’y habitue. 
+                                    Au départ, l’utilisateur accepte parce qu’il y a une raison, se protéger, éviter un danger. Mais au fil du temps, il s’y habitue. 
                                     Il finit par ne plus y penser. Et c’est là que l’impact devient plus profond. On s’autocensure sans s’en rendre compte. 
                                     On limite sa liberté d’expression, ses recherches, ses expérimentations, simplement parce qu’on sait que quelque chose ou quelqu’un observe. 
                                     Cela peut sembler anodin à court terme, mais ce sont justement ces ajustements silencieux qui transforment une société. 
@@ -104,7 +104,7 @@
                                 <p>
                                     Ce n’est donc pas une question de principe ou de refus de la technologie. 
                                     Ce n’est pas le fait que le logiciel collecte des données qui pose problème en soi. Ce qui compte, 
-                                    c’est ce que cette collecte produit — sur le comportement des individus, sur la structure sociale, et sur l’état futur de nos libertés. 
+                                    c’est ce que cette collecte produit sur le comportement des individus, sur la structure sociale, et sur l’état futur de nos libertés. 
                                     Si les conséquences sont globalement destructrices, alors il faut revoir l’outil, ses usages, et le cadre dans lequel il s’inscrit.
                                 </p>
                                 <p>
@@ -115,7 +115,7 @@
                                     C’est aussi comme ça qu’on peut continuer à exploiter les outils de la cybersécurité sans compromettre ce qui, à long terme, fonde une société libre.
                                 </p>
                                 <p>
-                                    Car en définitive, si seule la conséquence compte, alors elle doit inclure tout ce que l’action transforme — aujourd’hui et demain.
+                                    Car en définitive, si seule la conséquence compte, alors elle doit inclure tout ce que l’action transforme aujourd’hui et demain.
                                 </p>
                             </div>
                         </div>
